# advent-of-code

./: .editorconfig  .gitignore  Makefile  pyproject.toml
src/advent_of_code/: base.py  cli.py  errors.py  util.py
src/advent_of_code/aoc2015/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py  aoc24.py  aoc25.py
src/advent_of_code/aoc2016/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py
src/advent_of_code/aoc2017/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py
src/advent_of_code/aoc2019/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py  aoc24.py  aoc25.py  intcode.py
src/advent_of_code/aoc2020/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py  aoc24.py  aoc25.py
src/advent_of_code/aoc2020/aoc20/: __init__.py  image.py  tile.py
src/advent_of_code/aoc2021/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py  aoc24.py  aoc25.py
src/advent_of_code/aoc2022/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py  aoc24.py  aoc25.py
src/advent_of_code/aoc2023/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc19.py
src/advent_of_code/aoc2024/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py
src/advent_of_code/aoc2025/: aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  aoc11.py  aoc12.py
src/advent_of_code/resources/: ocr.yaml
src/advent_of_code/templates/: aoc.py.jinja
src/advent_of_code/util/: __init__.py  cfg.py  cycle.py  grammar.py  grid.py  kdtree.py  math.py  ocr.py  pathfinder.py  vector.py
test/util/: test_cfg.py  test_grammar.py  test_math.py
