[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Brad Eisenhauer", email = "bradley.eisenhauer@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "multimethod",
    "networkx",
    "pandas>=1.2",
    "parsy",
    "python-dotenv",
    "pytest>=7.1",
    "pytest-cov",
    "pyyaml>=6.0",
    "requests",
    "rich",
    "typer>=0.6",
]

[project.scripts]
aoc = "advent_of_code.cli:app"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[tool.isort]
profile = "black"
known_first_party = "advent_of_code"
line_length = 100
force_single_line = false
combine_as_imports = true

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing"
testpaths = ["test"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "A", # Builtins
    "B", # Bugbear
    "C", # Comprehensions (C4*), Mccabe (C901)
    # "D", # PyDocStyle
    "E", # PyCodeStyle, Eradicate (E800)
    "F", # Pyflakes
    "I", # isort
    "N", # PEP8 Naming
    "PT", # Pytest Style
    "S", # Bandit
    "SIM", # Simplify
    "W", # PyCodeStyle
]
ignore = ["A003", "B9", "S101"]
mccabe = { max-complexity = 8 }
pydocstyle = { convention = "numpy" }

[tool.ruff.lint.per-file-ignores]
# Ignore function call for default args in CLI.
"src/advent_of_code/cli.py" = ["B008"]
